--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<h1>BBQ Bacon Burger</h1>
-		<p>Doing the bare minimum once again.</p>
-		<img src="C:\CodingProjects\BbqEmoji.png" alt="BBQ" style="width:200px;height:200px;">
-	</body>
+<body>
+<h1>Hello Etpal</h1>
+<p>Click on the links below to switch to your pages!</p>
+</body>
 </html>
